<resources>
    <string name="app_name">Clinic management</string>
    <string name="newPatient">Add a new Patient</string>
    <string name="showPatient">View all Patients</string>
    <string name="report">Reports</string>
    <string name="Appointments">Appointments</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Gender">Gender</string>
    <string name="save">Save</string>
    <string name="fullname">Full name</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="phoneNo">PhoneNo.</string>
    <string name="address">Address</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="diagnosis">Complaint</string>
    <string name="complaint">Diagnosis</string>
    <string name="medicine">Medicine</string>
    <string name="search">Search</string>
    <string name="info">Patient Data</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="num">No.</string>
    <string name="addapp">Reservation Info</string>
    <string name="yes_off">Yes</string>
    <string name="no_still">No</string>
    <string name="send">Send SMS</string>
    <string name="leave">Exit</string>

    <string name="sureLeave">Are you sure you want to leave the app?</string>
    <string name="suresend">Are you sure to send an SMS to the patient about the appointment date?</string>
    <string name="AppointmentNow">Booking Dates Today</string>
    <string name="Entertime">Enter Time</string>
    <string name="Enterdate">Enter the Date</string>
    <string name="numPatient">Patients</string>
    <string name="Reservations">Reservations</string>

    <string name="deleted">deleted</string>
    <string name="delete">There is nothing to delete</string>
    <string name="Please_fill">Please fill in the blank</string>
    <string name="Modified">Modified</string>
    <string name="Added">Added</string>


</resources>